refatoração, melhorias no código, limpeza, adicionado testes unitários, helpers, mudança completa no código sem perder funcionalidades